@@ -1590,7 +1590,12 @@ static bool getOSVersion(BVRef bvr, char *str)
 			// getValueForKey uses const char for val
 			// so copy it and trim
 			*str = '\0';
-			strncat(str, val, MIN(len, 4));
+			// crazybirdy
+			if (len > 4 && (val[3] == '1')) {
+				strncat(str, val, MIN(len, 5));
+			} else {
+				strncat(str, val, MIN(len, 4));
+			}
 		} else {
 			valid = false;
 		}
